tests/ui/tuple/tuple-index-not-tuple.stderr
error[E0609]: no field `0` on type `Point`
  --> $DIR/tuple-index-not-tuple.rs:6:12
   |
LL |     origin.0;
   |            ^ help: a field with a similar name exists: `x`

error[E0609]: no field `0` on type `Empty`
  --> $DIR/tuple-index-not-tuple.rs:8:11
   |
LL |     Empty.0;
   |           ^ unknown field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.
